--- a/angular-react-simple/package.json
+++ b/angular-react-simple/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^6.1.0",
     "@types/react": "^16.7.3",
     "core-js": "^2.5.4",
+    "patternfly": "^3.57.0",
+    "patternfly-ng": "^4.5.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "rxjs": "~6.2.0",
