--- a/angular-react-simple/package.json
+++ b/angular-react-simple/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "render": "node src/app/renderAngular.js"
   },
   "private": true,
   "dependencies": {
@@ -24,10 +25,14 @@
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.10",
     "core-js": "^2.5.4",
+    "handlebars": "^4.0.12",
+    "mustache": "^3.0.1",
     "patternfly": "^3.57.0",
     "patternfly-ng": "^4.5.1",
     "react": "^16.6.1",
+    "react-docgen-typescript": "^1.12.2",
     "react-dom": "^16.6.1",
+    "readdirp": "^2.2.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
