--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/patternfly/dist/css/patternfly.min.css",
-              "./node_modules/patternfly/dist/css/patternfly-additions.min.css",
-              "./node_modules/patternfly-ng/dist/css/patternfly-ng.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -126,5 +123,10 @@
       }
     }
   },
-  "defaultProject": "angular-react-simple"
+  "defaultProject": "angular-react-simple",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
